--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -18,7 +18,7 @@
       {% else %}
         <h3>No Matches Found</h3>
       {% endif %}
-      <img src="{{ url_for('static', filename=result.result_image) }}" alt="Result Image">
+      <img src="data:image/jpeg;base64,{{ result.result_image }}" alt="Result Image">
       <br>
     {% endfor %}
     <a href="/">Scan More Photos</a>
