--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Photo Release Checker</title>
-  </head>
-  <body>
-    <h1>Upload Known Faces</h1>
-    <form action="/upload_known_faces" method="post" enctype="multipart/form-data">
-      <input type="file" name="files[]" multiple>
-      <input type="submit" value="Upload Known Faces">
-    </form>
-    
-    <h1>Upload Photos to Scan</h1>
-    <form action="/scan_photos" method="post" enctype="multipart/form-data">
-      <input type="file" name="files[]" multiple>
-      <input type="submit" value="Upload Photos to Scan">
-    </form>
-  </body>
+</head>
+<body>
+    <h1>Welcome to Photo Release Checker</h1>
+    {% if current_user.is_authenticated %}
+        <p>Hello, {{ current_user.username }}! <a href="{{ url_for('logout') }}">Logout</a></p>
+        <h2>Upload Known Faces</h2>
+        <form action="{{ url_for('upload_known_faces') }}" method="post" enctype="multipart/form-data">
+            <input type="file" name="files[]" multiple>
+            <input type="submit" value="Upload Known Faces">
+        </form>
+        
+        <h2>Upload Photos to Scan</h2>
+        <form action="{{ url_for('scan_photos') }}" method="post" enctype="multipart/form-data">
+            <input type="file" name="files[]" multiple>
+            <input type="submit" value="Upload Photos to Scan">
+        </form>
+    {% else %}
+        <p><a href="{{ url_for('login') }}">Login</a> or <a href="{{ url_for('register') }}">Register</a> to continue.</p>
+    {% endif %}
+</body>
 </html>
